# MY-own-repository-

./: CMakeLists.txt  main.cpp
GRA_Snake/: Apple.cpp  Apple.hpp  Board.cpp  Board.hpp  Snake.cpp  Snake.hpp  main.cpp
Include/: list.hpp
JavaScript/Baner z zdjęciami/: index.html  main.js
JavaScript/Dodawanie możliwości/: main.js
JavaScript/Dziedziczenie wielokrotne ES5/: main.js
JavaScript/Efekt pisania na maszynie/: index.html  main.js
JavaScript/Gra papier kamień nożyczki/: game.js  index.html
JavaScript/Jednoręki bandyta/: Draw.js  Statistics.js  Wallet.js  index.html
JavaScript/Liczba dni i godzin do zakończenia dnia/: index.html  main.js
JavaScript/Metody wraz z wyrażeniami regularnymi/: index.html  main.js
JavaScript/Zadanie z efektem pisania na maszynie/: index.html  main.js
JavaScript/Zmaina koloru przez ruch myszką/: index.html
JavaScript/Zmiana koloru przez ruch myszką/: main.js
JavaScript/clousers/: main.js
JavaScript/destructing/: main.js
JavaScript/dodawanie elementu do tablicy/: index.html  main.js
JavaScript/dodawnie elementów zadań/: index.html  main.js
JavaScript/encapsulation in javascirpt/: main.js
JavaScript/find odd int/: main.js
JavaScript/for in, for of/: main.js
JavaScript/generator kodu/: index.html  main.js
JavaScript/kliknięcie i zmiana koloru body/: main.js
JavaScript/licznik czasu na stronie z użyciem clouser/: main.js
JavaScript/localStorage/: index.html  main.js
JavaScript/metoda reduce/: main.js
JavaScript/operacje na tablicach/: main.js
JavaScript/operacjeNaTablicach/: main.js
JavaScript/operator rest/: js.js
JavaScript/pasek zmieniający grubość/: index.html  main.js
JavaScript/pojawianie się listy/: index.html  main.js
JavaScript/prototype/: main.js
JavaScript/quokka test/: test.html
JavaScript/stoper/: main.js
JavaScript/szyfr cezara/: main.js
JavaScript/słowo this/: main.js
JavaScript/training on sum parts/: main.js
JavaScript/tworzenie elementów listy i dodawanie nowych/: main.js
JavaScript/wprowadzenie hasła/: index.html  main.js
JavaScript/wyszukiwarka/: index.html  main.js
JavaScript/wyszukiwarka obiektowo/: index.html  main.js
JavaScript/zadanie z li/: index.html  script.js
Source/: list.cpp
Test/: test.cpp
cmake i list/: main.cpp  test.cpp
(+16 files in other folders)
